data/all_generated_tests/raw_wast_tests/call_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3863.wast
;; 2. **Call Local Function with Correct Stack Setup**:    Ensure that calling a local function within the same module, which consumes and produces values from the stack correctly, maintains stack integrity. This verifies that intra-module calls handle stack transitions without errors.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (func (type 0) (param i32) (result i32)
      local.get 0
    )
    (func (type 0) (result i32)
      (call 0 (i32.const 42))
      (drop)
    )
  )
  "type mismatch"
)